<resources>
    <string name="app_name">Minun-Sovellus</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Page</string>
    <string name="second_fragment_label">User Details Hub</string>
    <string name="Start">Get Start</string>
    <string name="StuID">SE/2018/031</string>
    <string name="StuName">R.A.N.N.Perera</string>
    <string name="back">Back to Home Page</string>
    <string name="Course_Title">SENG-22243</string>
    <string name="Course_Name1">Mobile Application</string>
    <string name="Course_Name2">Development</string>
    <string name="Assignment_Number">Mini Project 01</string>
    <string name="SearchID">Please Enter the User ID</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search">Search</string>
    <string name="please_insert_id_to_search">Please enter a valid user ID to search</string>
    <string name="id_not_found">Incorrect User ID.Try again.</string>
    <string name="user_details">User Details</string>
    <string name="id">ID</string>
    <string name="name">Name:</string>
    <string name="username">User Name:</string>
    <string name="email">Email:</string>
    <string name="br" />
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="city">City</string>
    <string name="zipcode">ZipCode</string>
    <string name="clear">Clear</string>
</resources>