<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DemoFragment"
    tools:ignore="MissingDefaultResource">

    <Button
        android:id="@+id/button_second"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/back"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <EditText
        android:id="@+id/TextFieldForID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/Search_ID"
        android:layout_width="215dp"
        android:layout_height="21dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/SearchID"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TextFieldForID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <Button
        android:id="@+id/Search"
        android:layout_width="108dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <LinearLayout
        android:id="@+id/layoutsWrongID"
        android:layout_width="313dp"
        android:layout_height="498dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679">

        <TextView
            android:id="@+id/br2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/br"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/WrongID"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:gravity="center"
            android:text="@string/please_insert_id_to_search"
            android:textColor="@color/purple_700"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutSIDNOTFOUND"
        android:layout_width="313dp"
        android:layout_height="498dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679">

        <TextView
            android:id="@+id/IdNotFound"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:gravity="center"
            android:text="@string/id_not_found"
            android:textColor="@color/Ferrari_RED"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layouts"
        android:layout_width="313dp"
        android:layout_height="498dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679">

        <TextView
            android:id="@+id/User_Details"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="center"
            android:text="@string/user_details"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/br"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/br"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/IDForUSer"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center_vertical"
            android:text="@string/id"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/UserName"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/UserUserName"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/UserEmail"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Phone"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center_vertical"
            android:text="@string/phone"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Website"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/website"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center_vertical"
            android:text="@string/company"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:gravity="center_vertical"
            android:text="@string/city"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/Clear"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:text="@string/clear"
        android:backgroundTint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_second"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />


</androidx.constraintlayout.widget.ConstraintLayout>