<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartingPageFragment">


    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546" />

    <TextView
        android:id="@+id/CourseTitle"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Course_Title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/CourseName1"
        android:layout_width="377dp"
        android:layout_height="61dp"
        android:layout_marginBottom="492dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Course_Name1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/CourseName2"
        android:layout_width="377dp"
        android:layout_height="61dp"
        android:layout_marginBottom="452dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Course_Name2"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Assignment"
        android:layout_width="344dp"
        android:layout_height="32dp"
        android:layout_marginBottom="384dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Assignment_Number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/IDview"
        android:layout_width="245dp"
        android:layout_height="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/StuID"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Assignment"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Nameview"
        android:layout_width="253dp"
        android:layout_height="38dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/StuName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Assignment"
        app:layout_constraintVertical_bias="0.913" />

</androidx.constraintlayout.widget.ConstraintLayout>